# Adhikar-saathi

./: .gitignore  LICENSE  NyayaSatya_Master_UI_Prompt.md  NyayaSatya_YOUR_Prompt_v2.md  README.md  docker-compose.yml  railway.json  setup.sh  start_dev.bat  start_dev.sh
agents/: README.md
agents/vapi_voice/: README.md
agents/whatsapp_bot/: README.md
backend/: .env.example  Dockerfile  check_db.py  create_bucket.py  pyproject.toml  seed_admin.py  test_sarvam.py  update_status.py
backend/app/: config.py  dependencies.py  main.py  supabase_client.py
backend/app/api/v1/: admin.py  documents.py  lawyer.py  lawyer_auth.py  maps.py  query.py  user_auth.py  voice.py
backend/app/models/: lawyer.py  query_log.py  user.py
backend/app/services/: adviser_persona.py  conversation_service.py  doc_service.py  embeddings.py  fast_mode.py  lawyer_service.py  request_service.py  storage_service.py  vector_store.py  verified_mode.py  voice_service.py
backend/app/services/case_predictor/: predictor.py
backend/app/services/hallucination_guard/: guard.py
backend/app/utils/: admin_emails.py  file_validation.py  geo.py  llm_client.py  redis_client.py  speech_preprocessor.py
backend/tests/: test_voice.py
corpus/: README.md
corpus/scripts/: embed.py  ingest.py
fast-mode/: index.html  main.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js.timestamp-1779302654517-cf64fdda16fef.mjs  vite.config.ts.timestamp-1779092011964-5bcfd8d85f161.mjs
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  documents.ts  lawyer.ts  query.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useNotifications.ts  useTextToSpeech.ts  useVoiceRecorder.ts
frontend/src/lib/: motion.ts  supabase.ts
frontend/src/pages/: Dashboard.tsx  DocumentScanner.tsx  Home.tsx  LawyerFinder.tsx  MyDocuments.tsx  Profile.tsx  QueryHistory.tsx  RegisterLawyer.tsx  Settings.tsx  VerifiedAnswer.tsx
frontend/src/stores/: useAuthStore.ts
frontend/src/types/: lawyer-dashboard.ts
rag-mode/: README.md  add_core_laws.py  app.py  bm25_encoder.json  core_laws.json  find_resume.py  fix_pinecone.py  fix_pwdva.py  ingest.py  ingest_iltur.py  ingest_v2.py  pinecone_stats.py  prompt.py  rag.py  refit_bm25.py  render.yaml  requirements.txt  run_tests.py  test1.json  test1_output.json  test2.json  test2_output.json  test3.json  test3_output.json  test4.json  test4_output.json  test5.json  test5_output.json  testB.json  testC.json  test_3_queries.py  test_bm25.py  test_bns.py  test_murder_api.py  test_murder_chunks.py  test_murder_final.py  test_rag_logic.py  test_rag_logic2.py
supabase/: config.toml  seed.sql
supabase/migrations/: 001_schema.sql  002_rls.sql  003_triggers.sql  004_document_scanner_columns.sql  005_add_lawyer_availability.sql
(+48 files in other folders)
