[project]
name = "nyayasatya-backend"
version = "1.0.0"
description = "FastAPI backend engine for Indian Legal Advisory Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "supabase>=2.4.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-jose[cryptography]>=3.3.0"
]

[tool.poetry]
name = "nyayasatya-backend"
version = "1.0.0"
description = "FastAPI backend engine for Indian Legal Advisory Platform"
authors = ["Aditya <aditya@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.2.0"
supabase = "^2.4.0"
redis = "^5.0.0"
httpx = "^0.27.0"
structlog = "^24.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
